src/test/ui/rfc-0107-bind-by-move-pattern-guards/rfc-reject-double-move-in-first-arm.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/rfc-reject-double-move-in-first-arm.rs:9:30
   |
LL |         A { a: v } if { drop(v); true } => v,
   |                              ^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
